--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- BARRA DE NAVEGACIÓN -->
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand me-4" href="index.html"> 
         <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
@@ -156,8 +156,7 @@
 
 <!-- SECCIÓN 1: CALCULADORA -->
 <section id="calculadora" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
-  <h2 class="text-center py-3">Calcula tu nota de acceso a un grado universitario</h2>
-
+<h2 class="text-center resaltado py-3 display-6 fw-bold">Calcula tu nota de acceso a un grado universitario</h2>
   <!-- Desde Bach -->
   <div class="container d-flex align-items-center justify-content-center py-4">
     <div class="card shadow-sm p-2">
@@ -268,7 +267,7 @@
 
 <!-- SECCIÓN 2: HERRAMIENTAS -->
 <section id="herramientas" class="min-vh-100 py-5 px-3 px-md-5">
-  <h2 class="text-center py-3">Trabaja tu rendimiento y mejorarás tus resultados</h2>
+  <h2 class="text-center resaltado py-3 display-6 fw-bold">Trabaja tu rendimiento y mejorarás tus resultados</h2>
 
   <!-- Slider -->
   <div class="pau-slider py-4">
@@ -287,7 +286,7 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-7 col-sm-10 text-center">
-                  <h2 class="display-5 fw-bold text-white">Pomodoro y Técnica 90/20</h2>
+                  <h3 class="display-5 fw-bold text-white">Pomodoro y Técnica 90/20</h3>
                   <p class="lead text-white mb-4">
                     Pomodoro y la técnica 90/20 te ayudan a estudiar mejor combinando pausas estratégicas y concentración profunda para rendir más en menos tiempo. Descubre cuál se adapta a ti y transforma tu forma de aprender.
                   </p>
@@ -305,7 +304,7 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-7 col-sm-10 text-center">
-                  <h2 class="display-5 fw-bold text-white">Práctica de recuperación</h2>
+                  <h3 class="display-5 fw-bold text-white">Práctica de recuperación</h3>
                   <p class="lead text-white mb-4">Deja de releer y empieza a aprender de verdad: la práctica de recuperación te entrena para recordar, comprender y rendir mejor en los exámenes con menos horas de estudio.</p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
                     <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#recuperacion">VER METODOLOGÍA</a>
@@ -321,7 +320,7 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-7 col-sm-10 text-center">
-                  <h2 class="display-5 fw-bold text-white">IA que te ayuda a estudiar mejor</h2>
+                  <h3 class="display-5 fw-bold text-white">IA que te ayuda a estudiar mejor</h3>
                   <p class="lead text-white mb-4">Descubre herramientas gratuitas de inteligencia artificial que te ayudan a concentrarte, organizar el estudio y aprender más en menos tiempo para llegar mejor preparado a la universidad.</p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
                     <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#herramientas-ia">
@@ -339,7 +338,7 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-7 col-sm-10 text-center">
-                  <h2 class="display-5 fw-bold text-white">Técnicas de relajación para exámenes</h2>
+                  <h3 class="display-5 fw-bold text-white">Técnicas de relajación para exámenes</h3>
                   <p class="lead text-white mb-4">Descubre técnicas de relajación eficaces como la respiración profunda, la relajación muscular progresiva o la visualización positiva para controlar los nervios, reducir la ansiedad y rendir mejor en la PAU.</p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
                     <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#pomodoro">VER TÉCNICAS</a>
@@ -349,6 +348,16 @@
             </div>
           </div>
         </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#pauCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#pauCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+
       </div>
     </div>
   </div>
@@ -356,7 +365,7 @@
 
 <!-- SECCIÓN 3: MODELOS DE EXÁMENES -->
 <section id="modelos" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
-  <h2 class="text-center py-3">Practica con modelos de cursos anteriores</h2>
+  <h2 class="text-center resaltado py-3 display-6 fw-bold">Practica con modelos de cursos anteriores</h2>
 
   <!-- Card 1 -->
   <div class="container my-5">
@@ -403,12 +412,110 @@
 
 <!-- SECCIÓN 4: UNIVERSIDADES -->
 <section id="universidades" class="min-vh-100 py-5 px-3 px-md-5">
-  <h2 class="text-center py-3">¿Conoces ya las Universidades españolas?</h2>
+  <h2 class="text-center resaltado py-3 display-6 fw-bold">¿Conoces ya las Universidades españolas?</h2>
+
+  <!-- Card QEDU -->
+  <div class="container my-5">
+    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 900px;">
+      <div class="row g-0 align-items-stretch">
+
+        <div class="col-md-5">
+          <a href="https://www.ciencia.gob.es/qedu.html" target="_blank" rel="noopener noreferrer" class="d-block h-100 image-link">
+            <img src="img/qedu.png" class="img-fluid w-100 h-100 object-fit-cover" alt="Página oficial del Ministerio (QEDU)"></a>
+        </div>
+
+        <div class="col-md-7 bg-primary text-white d-flex align-items-center">
+          <div class="p-4 p-md-5">
+            <h3 class="fw-bold mb-2">Buscador QEDU</h3>
+            <p class="text-white mb-4">Investiga y consulta la oferta de grados en España gracias a la herramienta oficial del Ministerio de Educación.</p>
+            <div class="d-flex flex-wrap gap-2">
+              <a href="https://www.ciencia.gob.es/qedu.html" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light rounded-pill px-4">Ir a la web oficial</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Card Universidades CCVV (ayroui template) -->
+  <h3 class="text-center py-3 display-7">Consulta la oferta de las principales universidades de la Comunidad Valenciana</h3>
+
+  <div class="col-md-4">
+    <div class="card h-100 border-0 shadow-sm card-style-1">
+      <img src="img/ejemplo-card.jpg" class="card-img-top" alt="logo UV">
+      <div class="card-body">
+        <h4 class="card-title fw-bold fs-6">Universitat de València</h4>
+      </div>
+    </div>
+  </div>
 
 </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </main>
+
+
+<!-- Footer (ayroui template) -->
+<footer class="bg-primary text-white pt-5">
+  <div class="container">
+    <div class="row gy-4">
+
+      <!-- Marca / descripción -->
+      <div class="col-md-4">
+        <a class="navbar-brand me-4 pb-3" href="index.html"> 
+          <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
+        </a>
+        <p class="text-white-50 small">Plataforma educativa ficticia para ayudar a estudiantes de la CCVV a preparar la PAU de forma clara y organizada.</p>
+      </div>
+
+      <!-- Columna 1 -->
+      <div class="col-6 col-md-2">
+        <h6 class="fw-semibold mb-3">Recursos</h6>
+        <ul class="list-unstyled">
+          <li><a href="#modelos" class="footer-link">Modelos PAU</a></li>
+          <li><a href="#calculadora" class="footer-link">Calculadora</a></li>
+          <li><a href="Técnicas-herramientas.html" class="footer-link">Técnicas y herramientas</a></li>
+        </ul>
+      </div>
+
+      <!-- Columna 2 -->
+      <div class="col-6 col-md-2">
+        <h6 class="fw-semibold mb-3">Información</h6>
+        <ul class="list-unstyled">
+          <li><a href="#universidades" class="footer-link">Universidades</a></li>
+          <li><a href="#" class="footer-link">Agenda</a></li>
+        </ul>
+      </div>
+
+      <!-- Columna 3 -->
+      <div class="col-12 col-md-4">
+        <h6 class="fw-semibold mb-3">Aviso</h6>
+        <p class="text-white-50 small mb-0">
+          Proyecto ficticio realizado con fines educativos y de portfolio.
+          No existe relación institucional con las entidades mencionadas.
+        </p>
+      </div>
+
+    </div>
+
+    <!-- Línea inferior -->
+    <hr class="border-light border-opacity-25 my-4">
+
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center pb-3">
+      <small class="text-white-50">
+        © 2026 PAUaPunto · Proyecto de portfolio - Isabel Monzonís
+      </small>
+      <div class="d-flex gap-3">
+        <a href="#" class="footer-link small">Privacidad</a>
+        <a href="#" class="footer-link small">Aviso legal</a>
+        <a href="#" class="footer-link small">Contacto</a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
 
 </body>
 </html>
