--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover" style="max-width: 20rem;">
+          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Agenda PAU 2026</div>
               <div class="card-body">
                   <h4 class="card-title">PAU sin "caos"</h4>
@@ -93,7 +93,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#calculadora" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover" style="max-width: 20rem;">
+          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Calculadora PAU</div>
               <div class="card-body">
                   <h4 class="card-title">Conoce tu nota</h4>
@@ -105,7 +105,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover" style="max-width: 20rem;">
+          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Exámenes</div>
               <div class="card-body">
                   <h4 class="card-title">Practica con modelos</h4>
@@ -117,7 +117,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#herramientas" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover" style="max-width: 20rem;">
+          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Prepárate</div>
               <div class="card-body">
                   <h4 class="card-title">Estudia con cabeza</h4>
@@ -129,7 +129,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover" style="max-width: 20rem;">
+          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Hábitos poderosos</div>
               <div class="card-body">
                   <h4 class="card-title">Mejora tu rendimiento</h4>
@@ -141,7 +141,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#universidades" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover" style="max-width: 20rem;">
+          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Universidades</div>
               <div class="card-body">
                   <h4 class="card-title">Explora universidades</h4>
@@ -411,7 +411,7 @@
 </section>
 
 <!-- SECCIÓN 4: UNIVERSIDADES -->
-<section id="universidades" class="min-vh-100 py-5 px-3 px-md-5">
+<section id="universidades" class="min-vh-100 py-5 px-3 px-md-5 mb-5">
   <h2 class="text-center resaltado py-3 display-6 fw-bold">¿Conoces ya las Universidades españolas?</h2>
 
   <!-- Card QEDU -->
@@ -421,11 +421,11 @@
 
         <div class="col-md-5">
           <a href="https://www.ciencia.gob.es/qedu.html" target="_blank" rel="noopener noreferrer" class="d-block h-100 image-link">
-            <img src="img/qedu.png" class="img-fluid w-100 h-100 object-fit-cover" alt="Página oficial del Ministerio (QEDU)"></a>
+            <img src="img/qedu.png" class="w-100 h-100 object-fit-cover" alt="Página oficial del Ministerio (QEDU)"></a>
         </div>
 
         <div class="col-md-7 bg-primary text-white d-flex align-items-center">
-          <div class="p-4 p-md-5">
+          <div class="p-5">
             <h3 class="fw-bold mb-2">Buscador QEDU</h3>
             <p class="text-white mb-4">Investiga y consulta la oferta de grados en España gracias a la herramienta oficial del Ministerio de Educación.</p>
             <div class="d-flex flex-wrap gap-2">
@@ -439,25 +439,85 @@
   </div>
 
   <!-- Card Universidades CCVV (ayroui template) -->
-  <h3 class="text-center py-3 display-7">Consulta la oferta de las principales universidades de la Comunidad Valenciana</h3>
+  <h3 class="text-center py-3 display-7">Principales universidades de la Comunidad Valenciana</h3>
 
-  <div class="col-md-4">
-    <div class="card h-100 border-0 shadow-sm card-style-1">
-      <img src="img/ejemplo-card.jpg" class="card-img-top" alt="logo UV">
-      <div class="card-body">
-        <h4 class="card-title fw-bold fs-6">Universitat de València</h4>
-      </div>
+  <div class="row g-4 justify-content-center">
+    <div class="col-6 col-md-4 col-lg-2">
+      <a class="logo-link" href="https://www.uv.es/" target="_blank" rel="noopener noreferrer">
+        <div class="card h-100 border-0 shadow-sm card-style-1 text-center rounded-4 overflow-hidden card-logo-hover">
+          <div class="pt-2 d-flex justify-content-center">
+            <img src="img/UV logo.jpg" class="logo-img" alt="logo UV">
+          </div>
+          <div class="card-body">
+            <h4 class="fw-bold fs-6">Universitat de València</h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-6 col-md-4 col-lg-2">
+      <a class="logo-link" href="https://www.upv.es/" target="_blank" rel="noopener noreferrer">
+        <div class="card h-100 border-0 shadow-sm card-style-1 text-center rounded-4 overflow-hiddencard-logo-hover">
+          <div class="pt-2 d-flex justify-content-center">
+            <img src="img/UPV logo.jpg" class="logo-img" alt="logo UPV">
+          </div>
+          <div class="card-body">
+            <h4 class="fw-bold fs-6">Universitat Politècnica de València</h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-6 col-md-4 col-lg-2">
+      <a class="logo-link" href="https://www.uji.es/" target="_blank" rel="noopener noreferrer">
+        <div class="card h-100 border-0 shadow-sm card-style-1 text-center rounded-4 overflow-hidden card-logo-hover">
+          <div class="pt-2 d-flex justify-content-center">
+            <img src="img/UJI logo.png" class="logo-img" alt="logo UJI">
+          </div>
+          <div class="card-body">
+            <h4 class="fw-bold fs-6">Universitat Jaume I</h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-6 col-md-4 col-lg-2">
+      <a class="logo-link" href="https://www.ua.es/" target="_blank" rel="noopener noreferrer">
+        <div class="card h-100 border-0 shadow-sm card-style-1 text-center rounded-4 overflow-hidden card-logo-hover">
+          <div class="pt-2 d-flex justify-content-center">
+            <img src="img/UA logo.png" class="logo-img" alt="logo UA">
+          </div>
+          <div class="card-body">
+            <h4 class="fw-bold fs-6">Universidad de Alicante</h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-6 col-md-4 col-lg-2">
+      <a class="logo-link" href="https://www.umh.es/" target="_blank" rel="noopener noreferrer">
+        <div class="card h-100 border-0 shadow-sm card-style-1 text-center rounded-4 overflow-hidden card-logo-hover">
+          <div class="pt-2 d-flex justify-content-center">
+            <img src="img/UMH logo.jpg" class="logo-img" alt="logo UMH">
+          </div>
+          <div class="card-body">
+            <h4 class="fw-bold fs-6">Universitas Miguel Hernández</h4>
+          </div>
+        </div>
+      </a>
     </div>
   </div>
-
 </section>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </main>
 
 
 <!-- Footer (ayroui template) -->
-<footer class="bg-primary text-white pt-5">
+<footer class="bg-primary text-white pt-4">
   <div class="container">
     <div class="row gy-4">
 
@@ -500,11 +560,11 @@
     </div>
 
     <!-- Línea inferior -->
-    <hr class="border-light border-opacity-25 my-4">
+    <hr class="border-light border-opacity-25 my-2">
 
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-center pb-3">
       <small class="text-white-50">
-        © 2026 PAUaPunto · Proyecto de portfolio - Isabel Monzonís
+        © 2026 PAUaPunto · Proyecto educativo DAW - Isabel Monzonís
       </small>
       <div class="d-flex gap-3">
         <a href="#" class="footer-link small">Privacidad</a>
