27/01/26 - Técnicas-herramientas.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="css/estilos.css" rel="stylesheet">
 </head>
 <body>
-    <!-- BARRA DE NAVEGACIÓN -->
+    
+<!-- BARRA DE NAVEGACIÓN -->
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand me-4" href="index.html"> 
@@ -412,7 +413,7 @@
 
 <!-- SECCIÓN 4: UNIVERSIDADES -->
 <section id="universidades" class="min-vh-100 py-5 px-3 px-md-5 mb-5">
-  <h2 class="text-center resaltado py-3 display-6 fw-bold">¿Conoces ya las Universidades españolas?</h2>
+  <h2 class="text-center resaltado py-3 display-6 fw-bold">¿Conoces ya la oferta de estudios Universitarios?</h2>
 
   <!-- Card QEDU -->
   <div class="container my-5">
@@ -427,9 +428,33 @@
         <div class="col-md-7 bg-primary text-white d-flex align-items-center">
           <div class="p-5">
             <h3 class="fw-bold mb-2">Buscador QEDU</h3>
-            <p class="text-white mb-4">Investiga y consulta la oferta de grados en España gracias a la herramienta oficial del Ministerio de Educación.</p>
+            <p class="text-white mb-4">Investiga la oferta de grados en España gracias a la herramienta oficial del Ministerio de Educación.</p>
             <div class="d-flex flex-wrap gap-2">
-              <a href="https://www.ciencia.gob.es/qedu.html" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light rounded-pill px-4">Ir a la web oficial</a>
+              <a href="https://www.ciencia.gob.es/qedu.html" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light rounded-pill px-4">IR A LA WEB</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Card Mapa GVA -->
+   <div class="container my-5">
+    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 900px;">
+      <div class="row g-0 align-items-stretch">
+
+        <div class="col-md-5">
+          <a href="https://geogrados.gva.es/grados/?idioma=es" target="_blank" rel="noopener noreferrer" class="d-block h-100 image-link">
+            <img src="img/Mapa interactivo CCVV.png" class="w-100 h-100 object-fit-cover" alt="Página oficial de la GVA (mapa interactivo)"></a>
+        </div>
+
+        <div class="col-md-7 bg-primary text-white d-flex align-items-center">
+          <div class="p-5">
+            <h3 class="fw-bold mb-2">Mapa Grados CCVV</h3>
+            <p class="text-white mb-4">Consulta la oferta de grados en la Comunidad Valenciana con el mapa interactivo de la Conselleria de Educación.</p>
+            <div class="d-flex flex-wrap gap-2">
+              <a href="https://geogrados.gva.es/grados/?idioma=es" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light rounded-pill px-4">IR A LA WEB</a>
             </div>
           </div>
         </div>
@@ -457,7 +482,7 @@
 
     <div class="col-6 col-md-4 col-lg-2">
       <a class="logo-link" href="https://www.upv.es/" target="_blank" rel="noopener noreferrer">
-        <div class="card h-100 border-0 shadow-sm card-style-1 text-center rounded-4 overflow-hiddencard-logo-hover">
+        <div class="card h-100 border-0 shadow-sm card-style-1 text-center rounded-4 overflow-hidden card-logo-hover">
           <div class="pt-2 d-flex justify-content-center">
             <img src="img/UPV logo.jpg" class="logo-img" alt="logo UPV">
           </div>
