--- a/Técnicas-herramientas.html
+++ b/Técnicas-herramientas.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,93 +8,223 @@
 <body>
 
 <!-- BARRA DE NAVEGACIÓN -->
-<nav class="navbar navbar-expand-lg bg-primary section-degradado-3" data-bs-theme="dark">
-<div class="container-fluid">
-<a class="navbar-brand me-4" href="index.html"> 
-    <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
-</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarColor01">
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand me-4" href="index.html"> 
+        <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor01">
 
-    <ul class="navbar-nav me-auto">
-    <li class="nav-item dropdown">
-        <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Agenda</a>
-        <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Guía del estudiante</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Calendario 2026</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Horario 2026</a>
-        </div>
-    </li>
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Agenda</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Guía del estudiante</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Calendario 2026</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Horario 2026</a>
+          </div>
+        </li>
 
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
-        <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Técnicas de relajación</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Hábitos poderosos</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="Técnicas-herramientas.html">Herramientas para el estudio</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">IA para el estudio</a>
-        </div>
-    </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="Técnicas-herramientas.html">Técnicas de relajación</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Hábitos poderosos</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="Técnicas-herramientas.html">Herramientas para el estudio</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="Técnicas-herramientas.html">IA para el estudio</a>
+          </div>
+        </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="#calculadora">Calculadora PAU
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Exámenes</a>
-    </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#calculadora">Calculadora PAU
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#modelos">Exámenes</a>
+        </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="#calculadora">Universidades
-        </a>
-    </li>
-    </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="#universidades">Universidades
+          </a>
+        </li>
+      </ul>
 
-    <form class="d-flex">
-    <input class="form-control me-sm-2" type="search" placeholder="Busca aquí">
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Búsqueda</button>
-    </form>
-</div>
-</div>
+      <form class="d-flex">
+        <input class="form-control me-sm-2" type="search" placeholder="Busca aquí">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Búsqueda</button>
+      </form>
+    </div>
+  </div>
 </nav>
 
 <main>
-<section id="hero">
-<h1 class="h1 py-4 text-center">
-    <img src="img/logo h1.png" alt="PAU Fácil" class="img-fluid" style="height:64px">
-</h1>
-<h2 class="text-center py-2">Técnicas para el estudio y la organización</h2>
-    
-<!-- Pomodoro y Técnica 90/20 -->
-<div id="pomodoro" class="container my-5">
-  <div class="ratio ratio-16x9">
-    <iframe
-      src="https://www.youtube.com/embed/om-U6hiX4lw"
-      title="90/15 - 90 Minute Pomodoro Timer with 15 minute breaks - Repeats 5 times"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
-  </div>
-</div>
+  <h1 class="text-center py-4">Técnicas para el estudio y la organización</h1>
 
-<div id="90/20" class="container my-5">
-  <div class="ratio ratio-16x9">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/cPtXhWnqzAc?si=lD-Kan48eKlhCYs5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
-</div>
+  <div class="container-fluid">
+    <div class="row">
 
-<div id="recuperación" class="container my-5">
-  <div class="ratio ratio-16x9">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7cAbAL0pkpQ?si=xLnsJGnuqJDfVNbq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <!-- SIDEBAR -->
+      <aside class="col-12 col-lg-3 col-xl-2 border-end d-none d-lg-block">
+        <div class="fixed-top sidebar-styles py-3">
+          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Estudio y organización</h3>
+          <nav class="nav flex-column px-2 mb-2">
+            <a class="nav-link" href="#pomodoro">Pomodoro</a>
+            <a class="nav-link" href="#90-20">Técnica 90/20</a>
+            <a class="nav-link" href="#recuperacion">Práctica de recuperación</a>
+          </nav>
+          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Relacación y antiestrés</h3>
+          <nav class="nav flex-column px-2 mb-2">
+            <a class="nav-link" href="#extra1">Jacobson</a>
+            <a class="nav-link" href="#extra2">Respiración profunda</a>
+            <a class="nav-link" href="#extra3">Extra 3</a>
+          </nav>
+          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Herramientas de IA</h3>
+          <nav class="nav flex-column px-2 mb-2">
+            <a class="nav-link" href="#extra1">Prompts para el estudio</a>
+            <a class="nav-link" href="#extra2">Extra 2</a>
+            <a class="nav-link" href="#extra3">Extra 3</a>
+          </nav>
+          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Hábitos poderosos</h3>
+          <nav class="nav flex-column px-2 mb-2">
+            <a class="nav-link" href="#extra1">Alimentación</a>
+            <a class="nav-link" href="#extra2">Deporte y ejercio</a>
+            <a class="nav-link" href="#extra3">Sueño</a>
+            <a class="nav-link" href="#extra4">Extra 4</a>
+            <a class="nav-link" href="#extra5">Extra 5</a>
+          </nav>
+        </div>
+      </aside>
+
+      <!-- Estudio -->
+      <div class="col-12 col-lg-9 col-xl-10">
+
+        <!-- Pomodoro -->
+        <section id="pomodoro" class="container my-5">
+          <h2 class="mb-4">Técnica Pomodoro</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>La técnica Pomodoro es una forma sencilla de estudiar mejor gestionando el tiempo: trabajas 25 minutos con máxima concentración y luego haces 5 minutos de descanso para resetear la mente.</p>
+              <p>Para aplicarla, repite este ciclo 4 veces y después haz una pausa más larga (15-30 min); así evitas la fatiga, mantienes el foco y rindes más sin quemarte.</p>
+              <p>Esta técnica funciona porque el cerebro mantiene mejor la atención en bloques cortos de tiempo: estudios muestran que la concentración sostenida empieza a disminuir a partir de los 20–30 minutos. Por eso, este método es especialmente eficaz para tareas que requieren constancia, memorización y para evitar la procrastinación, como el estudio diario o la resolución de ejercicios.</p>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/om-U6hiX4lw" title="Técnica Pomodoro" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- 90/20 -->
+        <section id="90-20" class="container my-5">
+          <h2 class="mb-4">Técnica 90/20</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>La técnica 90/20 se basa en estudiar 90 minutos de concentración profunda seguidos de 20 minutos de descanso real, ideal para tareas largas y exigentes.</p>
+              <p>Frente al Pomodoro (25/5), pensado para vencer la procrastinación y mantener el foco en tareas cortas, la 90/20 es más eficaz para estudio avanzado y proyectos largos.</p>
+              <p>Funciona porque favorece el estado de “deep work”: menos interrupciones, mayor continuidad y mejor consolidación de la información en tareas complejas. Investigaciones indican que los bloques largos mejoran la comprensión profunda y la transferencia a largo plazo, siempre que el descanso sea completo.</p>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/cPtXhWnqzAc?si=lD-Kan48eKlhCYs5" title="Técnica 90/20" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Recuperación -->
+        <section id="recuperacion" class="container my-5">
+          <h2 class="mb-4">Práctica de recuperación</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>La práctica de recuperación consiste en estudiar intentando recordar la información sin mirar los apuntes, en lugar de releerlos pasivamente. Numerosos estudios en demuestran que el acto de recuperar información fortalece mejora la retención a largo plazo.</p>
+              <p>Para aplicarla sigue estos pasos: primero estudia el contenido de forma comprensiva; después, cierra los apuntes y escribe o explica todo lo que recuerdes; por último, revisa el material para detectar errores y lagunas, y vuelve a intentarlo más adelante. Repite este proceso las veces que necesites.</p>
+              <p>El cerebro aprende mejor cuando se enfrenta al esfuerzo de recordar, y no solo de reconocer la información. Está especialmente indicada para memorizar conceptos clave, preparar exámenes teóricos y comprobar si realmente dominas un tema, siendo una de las estrategias con mayor respaldo científico en educación.</p>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/7cAbAL0pkpQ?si=xLnsJGnuqJDfVNbq" title="Técnica 90/20" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+
+      </div>
+    </div>
   </div>
-</div>
+</main>
+
+<!-- Footer (ayroui template) -->
+<footer class="bg-primary text-white pt-4">
+  <div class="container">
+    <div class="row gy-4">
+
+      <!-- Marca / descripción -->
+      <div class="col-md-4">
+        <a class="navbar-brand me-4 pb-3" href="index.html"> 
+          <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
+        </a>
+        <p class="text-white-50 small">Plataforma educativa ficticia para ayudar a estudiantes de la CCVV a preparar la PAU de forma clara y organizada.</p>
+      </div>
+
+      <!-- Columna 1 -->
+      <div class="col-6 col-md-2">
+        <h6 class="fw-semibold mb-3">Recursos</h6>
+        <ul class="list-unstyled">
+          <li><a href="#modelos" class="footer-link">Modelos PAU</a></li>
+          <li><a href="#calculadora" class="footer-link">Calculadora</a></li>
+          <li><a href="Técnicas-herramientas.html" class="footer-link">Técnicas y herramientas</a></li>
+        </ul>
+      </div>
+
+      <!-- Columna 2 -->
+      <div class="col-6 col-md-2">
+        <h6 class="fw-semibold mb-3">Información</h6>
+        <ul class="list-unstyled">
+          <li><a href="#universidades" class="footer-link">Universidades</a></li>
+          <li><a href="#" class="footer-link">Agenda</a></li>
+        </ul>
+      </div>
+
+      <!-- Columna 3 -->
+      <div class="col-12 col-md-4">
+        <h6 class="fw-semibold mb-3">Aviso</h6>
+        <p class="text-white-50 small mb-0">
+          Proyecto ficticio realizado con fines educativos y de portfolio.
+          No existe relación institucional con las entidades mencionadas.
+        </p>
+      </div>
+
+    </div>
+
+    <!-- Línea inferior -->
+    <hr class="border-light border-opacity-25 my-2">
+
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center pb-3">
+      <small class="text-white-50">
+        © 2026 PAUaPunto · Proyecto educativo DAW - Isabel Monzonís
+      </small>
+      <div class="d-flex gap-3">
+        <a href="#" class="footer-link small">Privacidad</a>
+        <a href="#" class="footer-link small">Aviso legal</a>
+        <a href="#" class="footer-link small">Contacto</a>
+      </div>
+    </div>
+  </div>
+</footer>
+
 
 
 </body>
