12/01/2026 - trabajo en generación de contenido para tecincas-herramientas.html

--- a/Técnicas-herramientas.html
+++ b/Técnicas-herramientas.html
@@ -82,9 +82,9 @@
           </nav>
           <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Relacación y antiestrés</h3>
           <nav class="nav flex-column px-2 mb-2">
-            <a class="nav-link" href="#extra1">Jacobson</a>
-            <a class="nav-link" href="#extra2">Respiración profunda</a>
-            <a class="nav-link" href="#extra3">Extra 3</a>
+            <a class="nav-link" href="#jacobson">Relajación de Jacobson</a>
+            <a class="nav-link" href="#respiracion">Respiración profunda</a>
+            <a class="nav-link" href="#visualizacion">Visualización positiva</a>
           </nav>
           <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Herramientas de IA</h3>
           <nav class="nav flex-column px-2 mb-2">
@@ -160,6 +160,119 @@
           </div>
         </section>
 
+        <!-- Jacobson -->
+        <section id="jacobson" class="container my-5">
+          <h2 class="mb-4">Relajación progresiva de Jacobson</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>La relajación progresiva de Jacobson es una técnica que reduce la ansiedad mediante la tensión y relajación consciente de distintos grupos musculares. Ayuda a tomar conciencia del cuerpo y a liberar la tensión acumulada por el estrés académico.</p>
+              <p>Para aplicarla, tensa durante 5 segundos un grupo muscular (por ejemplo, manos o hombros) y relájalo durante 10–15 segundos antes de pasar al siguiente. Recorre todo el cuerpo de forma ordenada, en un entorno tranquilo.</p>
+              <p>Esta técnica está respaldada por estudios en psicología clínica que muestran una reducción significativa del estrés y la activación fisiológica. Es especialmente eficaz antes de exámenes, presentaciones orales o situaciones que generan nervios físicos intensos.</p>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vAaRM_wV5W8?si=T82KPiUsdlKdX4JP" title="Relajación progresiva de Jacobson" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Respiración -->
+        <section id="respiracion" class="container my-5">
+          <h2 class="mb-4">Respiración profunda (diafragmática)</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>La respiración profunda o diafragmática es una técnica sencilla para calmar el sistema nervioso y reducir la ansiedad. Consiste en respirar lenta y profundamente usando el diafragma en lugar del pecho.</p>
+              <p>Para practicarla, inhala por la nariz durante 4 segundos, mantén el aire 2 segundos y exhala lentamente por la boca durante 6 segundos. Repite el ciclo durante 3–5 minutos, centrando la atención en la respiración.</p>
+              <p>Numerosos estudios demuestran que este tipo de respiración activa el sistema parasimpático, disminuyendo la frecuencia cardíaca y el cortisol. Es ideal justo antes de empezar un examen o cuando aparecen bloqueos por nervios.</p>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/EGO5m_DBzF8?si=6LqqJ0C3Sk_5UClz" title="Respiración profunda" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Visualización -->
+        <section id="visualizacion" class="container my-5">
+          <h2 class="mb-4">Visualización positiva</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>La visualización consiste en imaginar de forma consciente una situación futura de manera positiva y detallada, como realizar un examen con calma y seguridad. Se utiliza para reducir la ansiedad y mejorar la confianza.</p>
+              <p>Para aplicarla, busca un lugar tranquilo, cierra los ojos y visualízate afrontando el examen con serenidad: entrando al aula, leyendo las preguntas con calma y respondiendo con seguridad durante varios minutos.</p>
+              <p>Estudios en neurociencia y psicología del rendimiento muestran que la visualización activa las mismas áreas cerebrales que la experiencia real. Es especialmente útil para exámenes importantes, pruebas orales y situaciones que generan miedo anticipatorio.</p>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BdyPzolaYUw?si=cDmEuMt_pwcTzh7S" title="Visualización positiva" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Estudiar con IA -->
+        <section id="estudio-ChatGTP" class="container my-5">
+          <h2 class="mb-4">Estudia con ayuda de IA Generativa</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p></p>
+              <p></p>
+              <p></p>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/q6QACUlYjms?si=F_pbjioh-asfdRYO" title="Técnicas de estudio con ChatGTP" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="mymap" class="container my-5">
+          <h2 class="mb-4">MyMap.AI</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>AI Study Plan Creator de MyMap.AI es una herramienta de IA que te crea un plan de estudio personalizado en minutos. Tú le dices qué asignaturas tienes, cuándo examinas y cuánto tiempo puedes estudiar, y te lo organiza en sesiones realistas.</p>
+              <p>Cómo usarla (pasos rápidos): 1) escribe tus asignaturas y fechas de examen/entrega; 2) indica tus horas disponibles por día; 3) genera el plan y ajusta lo que necesites (más repaso, más práctica, descansos, etc.).</p>
+              <p>Funciona bien porque reduce la “carga mental” de planificar (lo que suele hacer que procrastines) y te obliga a dividir objetivos grandes en tareas pequeñas y concretas. Es ideal para organizar semanas de estudio, preparar exámenes con varios temas y mantener constancia sin improvisar cada día.</p>
+
+              <a href="https://www.mymap.ai/es/study-plan-creator" target="_blank" rel="noopener noreferrer"
+                class="btn btn-outline-primary rounded-pill px-4">IR A LA WEB</a>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <img src="img/imagen 3.jpg" alt="imagen decorativa" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="scholarly" class="container my-5">
+          <h2 class="mb-4">Scholarly AI</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-md-6">
+              <p>El AI Study Schedule Generator de Scholarly crea un horario de estudio optimizado para ti: repartiendo materias, priorizando fechas cercanas y encajándolo en tus horas disponibles. Es útil si te agobias organizándote o si siempre acabas dejando lo más difícil para el final.</p>
+              <p>Cómo llevarlo a cabo: 1) mete tus asignaturas y tareas (y qué tan “pesadas” son); 2) añade tus horas libres y fechas límite; 3) genera el horario y úsalo como guía semanal, reajustándolo si un día fallas (sin drama, se reequilibra).</p>
+              <p>Funciona porque convierte “tengo que estudiar muchísimo” en un plan concreto con bloques diarios, lo que mejora la adherencia y reduce la indecisión. Es ideal para semanas previas a exámenes, épocas con muchas entregas y estudiantes que necesitan estructura clara y realista.</p>
+
+              <a href="https://scholarly.so/tools/study-schedule-generator" target="_blank" rel="noopener noreferrer"
+                class="btn btn-outline-primary btn-outline rounded-pill px-4">
+                IA A LA WEB
+              </a>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ratio ratio-16x9">
+                <img src="img/imagen 8.jpg" alt="imagen decorativa" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </section>
 
       </div>
     </div>
