28/01/26 - apartado de técnicas y herramientas. Faltan hábitos y asegurar enlaces, antes de las correcciones finales y asegurarse de accesibilidad y otros aspectos fundamentales.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.8/dist/pulse/bootstrap.min.css" rel="stylesheet">
     <link href="css/estilos.css" rel="stylesheet">
 </head>
-<body>
+<body class="index">
 <!-- BARRA DE NAVEGACIÓN -->
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary sticky-top" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand me-4" href="index.html"> 
         <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
