01/02/2026 - Comienzo agenda.html

--- a/Técnicas-herramientas.html
+++ b/Técnicas-herramientas.html
@@ -35,13 +35,13 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#jacobson">Técnicas de relajación</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Hábitos poderosos</a>
-            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#jacobson">Técnicas de relajación</a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#ChatGTP">IA para el estudio</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#alimentacion">Hábitos poderosos</a>
           </div>
         </li>
 
@@ -94,11 +94,10 @@
           </nav>
           <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Hábitos poderosos</h3>
           <nav class="nav flex-column px-2 mb-2">
-            <a class="nav-link" href="#extra1">Alimentación</a>
-            <a class="nav-link" href="#extra2">Deporte y ejercicio</a>
-            <a class="nav-link" href="#extra3">Sueño</a>
-            <a class="nav-link" href="#extra4">Extra 4</a>
-            <a class="nav-link" href="#extra5">Extra 5</a>
+            <a class="nav-link" href="#alimentacion">Alimentación</a>
+            <a class="nav-link" href="#deporte">Deporte y ejercicio</a>
+            <a class="nav-link" href="#sueno">Sueño</a>
+            <a class="nav-link" href="#rrss">RRSS</a>
           </nav>
         </div>
       </aside>
@@ -232,6 +231,7 @@
           </div>
         </section>
 
+        <!-- mymap.ai -->
         <section id="mymap" class="section-gap px-3 px-lg-4">
           <h2 class="mb-4">MyMap.AI</h2>
           <div class="row align-items-center g-4">
@@ -252,6 +252,7 @@
           </div>
         </section>
 
+        <!-- scholarly -->
         <section id="scholarly" class="section-gap px-3 px-lg-4">
           <h2 class="mb-4">Scholarly AI</h2>
           <div class="row align-items-center g-4">
@@ -269,6 +270,87 @@
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
                 <img src="img/imagen 8.jpg" alt="imagen decorativa" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Alimentación -->
+        <section id="alimentacion" class="section-gap px-3 px-lg-4">
+          <h2 class="mb-4">Aliméntate para rendir mejor al estudiar</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-lg-6">
+              <p>Lo que comes influye mucho en cómo te concentras, memorizas y aprendes. El cerebro gasta alrededor del 20 % de la energía diaria, así que necesita un suministro constante de “buen combustible” para rendir bien mientras estudias.</p>
+              <p>Los estudios coinciden en que llevar una alimentación equilibrada, basada en alimentos reales y poco procesados, ayuda a rendir mejor a nivel mental. Un buen ejemplo es la dieta mediterránea, relacionada con mejor memoria, más atención y menos cansancio mental gracias a sus grasas saludables, antioxidantes y nutrientes clave.</p>
+              <p>Para estudiar en condiciones, es importante evitar subidas y bajadas bruscas de azúcar en sangre. Esto se consigue apostando por carbohidratos complejos como la avena, el arroz integral o las legumbres, combinados con proteínas y grasas saludables. Así evitas el típico bajón de energía y la pérdida de concentración.</p>
+              <p>Nutrientes como el hierro, el magnesio, el zinc o las vitaminas del grupo B son esenciales para que el cerebro funcione bien. Cuando faltan, es habitual notar más cansancio, peor atención y dificultad para memorizar, algo bastante común en dietas desordenadas.</p>
+              <p>Beber agua también es más importante de lo que parece. Incluso una deshidratación ligera puede afectar a la atención y a la agilidad mental. Tener agua a mano y beber con regularidad mientras estudias es una de las formas más sencillas de rendir mejor.</p>
+              <p>Por último, comer de forma regular y sin excesos ayuda más que darse un atracón antes de ponerse a estudiar. Las comidas muy pesadas suelen dar sueño, mientras que pasar muchas horas sin comer deja al cerebro sin energía. Encontrar el punto medio marca la diferencia.</p>
+            </div>
+
+            <div class="col-12 col-lg-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/R5z5tiKtTs8?si=479CjuQf-cZOMPb1" title="Versión Completa. Mitos y realidades sobre la alimentación saludable. J.M. Mulet, científico" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Deporte -->
+        <section id="deporte" class="section-gap px-3 px-lg-4">
+          <h2 class="mb-4">Muévete para estudiar mejor</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-lg-6">
+              <p>Hacer ejercicio de forma regular no solo es bueno para el cuerpo, también es clave para el cerebro. La actividad física mejora la concentración, la memoria y la capacidad de aprender, además de reducir el estrés y la ansiedad, dos grandes enemigos del estudio.</p>
+              <p>Los estudios muestran que el ejercicio aumenta el flujo sanguíneo al cerebro y favorece la liberación de sustancias que ayudan a crear y reforzar conexiones neuronales. Esto se traduce en una mente más despierta, mayor claridad mental y mejor capacidad para retener información.</p>
+              <p>No hace falta entrenar duro ni pasar horas en el gimnasio. Caminar a buen ritmo, montar en bici o hacer ejercicio moderado durante 20–30 minutos ya tiene efectos positivos sobre la atención y el rendimiento académico.</p>
+              <p>Además, el ejercicio ayuda a regular el estado de ánimo y mejora la calidad del sueño, lo que indirectamente también favorece el estudio. Estudiar después de moverte un poco suele ser más eficaz que hacerlo tras muchas horas sentado sin descanso.</p>
+              <p>La clave está en la constancia. Incorporar movimiento a la rutina diaria es una de las formas más sencillas y naturales de estudiar con más energía y menos saturación mental.</p>
+            </div>
+
+            <div class="col-12 col-lg-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PXvz8zyuob0?si=NvdN0XMk-7upDqTg" title="Los beneficios del ejercicio para tu cerebro. Wendy Suzuki, neurocientífica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Sueño -->
+        <section id="sueno" class="section-gap px-3 px-lg-4">
+          <h2 class="mb-4">Dormir bien también es estudiar</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-lg-6">
+              <p>El sueño es uno de los factores más importantes para aprender bien, aunque a menudo se subestima. Dormir poco o mal afecta directamente a la atención, la memoria, la toma de decisiones y la capacidad para concentrarse durante el estudio.</p>
+              <p>Mientras dormimos, el cerebro consolida lo aprendido durante el día, organiza la información y elimina lo que no es relevante. Por eso, estudiar mucho pero dormir poco suele ser menos eficaz que estudiar menos y descansar bien.</p>
+              <p>La evidencia científica es clara: dormir entre 7 y 9 horas mejora el rendimiento académico, mientras que la falta de sueño aumenta los despistes, los errores y la sensación de cansancio mental.</p>
+              <p>Acostarse siempre a la misma hora, evitar pantallas antes de dormir y no estudiar hasta el último minuto ayudan a mejorar la calidad del sueño. Dormir bien no es perder tiempo, es invertirlo mejor.</p>
+              <p>Si el cerebro está cansado, no rinde. Priorizar el descanso es una de las decisiones más inteligentes para estudiar de forma eficiente y sostenible.</p>
+            </div>
+
+            <div class="col-12 col-lg-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VZyBJI5V24U?si=Ob-3sOZ8vb1FKSyb" title=" V. Completa. “El sueño es fundamental para la salud física y mental”. Javier Albares, neurofisiólogo " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- RRSS -->
+        <section id="rrss" class="section-gap px-3 px-lg-4">
+          <h2 class="mb-4">Redes sociales y concentración: una relación complicada</h2>
+          <div class="row align-items-center g-4">
+            <div class="col-12 col-lg-6">
+              <p>El uso constante de redes sociales, vídeos cortos y contenido rápido tiene un impacto directo en la capacidad de atención. Este tipo de estímulos entrenan al cerebro para buscar gratificación inmediata, lo que dificulta mantener la concentración en tareas largas como estudiar.</p>
+              <p>Los estudios indican que alternar continuamente entre el móvil y el estudio reduce la comprensión y la memoria, aunque se tenga la sensación de “multitarea”. En realidad, el cerebro necesita tiempo para volver a concentrarse cada vez que se interrumpe.</p>
+              <p>Plataformas con vídeos cortos y notificaciones constantes hacen que mantener la atención sostenida sea cada vez más difícil, especialmente en jóvenes. Esto no significa que haya que eliminarlas, pero sí aprender a usarlas con límites.</p>
+              <p>Estudiar sin el móvil cerca, silenciar notificaciones o usar bloques de tiempo sin redes mejora notablemente la concentración y reduce el tiempo total de estudio necesario.</p>
+              <p>La clave no está en prohibir, sino en controlar. Menos distracciones digitales durante el estudio se traducen en más foco, menos frustración y mejores resultados.</p>
+            </div>
+
+            <div class="col-12 col-lg-6">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QxmpgHkv_jI?si=xd6M10Etx-ahzBOO" title=" Esto Ocurre a tu Cerebro cuando Entras a Redes Sociales (Neurocientífico) " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
