--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
 
       <ul class="navbar-nav me-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Agenda</a>
+          <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="agenda.html" role="button" aria-haspopup="true" aria-expanded="false">Agenda</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Guía del estudiante</a>
+            <a class="dropdown-item" href="agenda.html#guia">Guía del estudiante</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Calendario 2026</a>
+            <a class="dropdown-item" href="agenda.html#calendario">Calendario 2026</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Horario 2026</a>
+            <a class="dropdown-item" href="agenda.html#horario">Horario 2026</a>
           </div>
         </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="Técnicas-herramientas.html">Técnicas de relajación</a>
+            <a class="dropdown-item" href="Técnicas-herramientas.html#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Hábitos poderosos</a>
+            <a class="dropdown-item" href="Técnicas-herramientas.html#jacobson">Técnicas de relajación</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html">Herramientas para el estudio</a>
+            <a class="dropdown-item" href="Técnicas-herramientas.html#ChatGTP">IA para el estudio</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html">IA para el estudio</a>
+            <a class="dropdown-item" href="Técnicas-herramientas.html#alimentación">Hábitos poderosos</a>
           </div>
         </li>
 
@@ -104,7 +104,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4">
-          <a href="#" class="text-decoration-none text-reset">
+          <a href="#modelos" class="text-decoration-none text-reset">
           <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Exámenes</div>
               <div class="card-body">
@@ -116,7 +116,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4">
-          <a href="#herramientas" class="text-decoration-none text-reset">
+          <a href="Técnicas-herramientas.html" class="text-decoration-none text-reset">
           <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Prepárate</div>
               <div class="card-body">
@@ -128,7 +128,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4">
-          <a href="#" class="text-decoration-none text-reset">
+          <a href="Técnicas-herramientas.html#alimentacion" class="text-decoration-none text-reset">
           <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Hábitos poderosos</div>
               <div class="card-body">
@@ -267,7 +267,7 @@
 
 <!-- SECCIÓN 2: HERRAMIENTAS -->
 <section id="herramientas" class="min-vh-100 py-5 px-3 px-md-5">
-  <h2 class="text-center resaltado py-3 display-6 fw-bold">Trabaja tu rendimiento y mejorarás tus resultados</h2>
+  <h2 class="text-center resaltado py-3 display-6 fw-bold">No estudies más, estudia mejor</h2>
 
   <!-- Slider -->
   <div class="pau-slider py-4">
@@ -360,12 +360,17 @@
 
       </div>
     </div>
+  
+          <div class="text-center d-flex align-items-center">
+            <h3>«No importa lo lento que vayas, siempre que no te detengas.» Confucio</h3>
+          </div>
+
   </div>
 </section>
 
 <!-- SECCIÓN 3: MODELOS DE EXÁMENES -->
 <section id="modelos" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
-  <h2 class="text-center resaltado py-3 display-6 fw-bold">Practica con modelos de cursos anteriores</h2>
+  <h2 class="text-center resaltado py-3 display-6 fw-bold">Practica con modelos oficiales</h2>
 
   <!-- Card 1 -->
   <div class="container my-5">
@@ -382,7 +387,7 @@
             <p class="text-white mb-4">
               ¡NOVEDAD! Accede ya a los modelos de los exámenes PAU de este curso.
             </p>
-            <a href="https://universitats.gva.es/es/caracteristiques-examens-criteris-generals-correccio-i-models-examen-pau-2026" class="btn btn-outline-light rounded-pill px-4">IR A LA WEB</a>
+            <a href="https://universitats.gva.es/es/caracteristiques-examens-criteris-generals-correccio-i-models-examen-pau-2026" class="btn btn-outline-light rounded-pill px-4" target="_blank">IR A LA WEB</a>
           </div>
         </div>
       </div>
